--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+       <meta charset="UTF-8">     
+       <meta name="description" content="TONATI. El autentico sabor de Chihuahua, built by future engineers for an integrator."/>
+       <meta name="robots" content="index,follow">
+       <title> TONATI-El autentico sabor de Chihuahua. </title>
+       <meta name="viewport"content="width=device-width, inictial-scale=1.0">
+       <link rel="stylesheet" href="style.css"> 
+    </head>
+    <body> 
+        <main >
+            <section>
+                    <div class="container">
+                    <figure>
+                        <img
+                        src="./Imagenes/Carne seca.imagen.jpg"
+                        alt="Carne seca"
+                        />
+                        </figure>
+                    <div class="content-section">
+                    <h1>TONATI.</h1>
+                    <p>El verdero sabor del norte.</p>
+                    <a href="pagina-destino.html">
+                    <button class="btn">EMPEZAR A DESHIDRATAR</button>
+                    </a>
+                    <div class="footer">BUILT BY FUTURE ENGINEERS FOR AN INTEGRATOR</div>
+            </section>
+        </main>
+    </body>
 </html>
