Cambios de diseño

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
                     <div class="container">
                     <figure>
                         <img
-                        src="./Imagenes/Carne seca.imagen.jpg"
+                        src="Carne seca.imagen.jpg"
                         alt="Carne seca"
                         />
                         </figure>
                     <div class="content-section">
                     <h1>TONATI.</h1>
                     <p>El verdero sabor del norte.</p>
-                    <a href="pagina-destino.html">
+                    <a href="desihidratado.html">
                     <button class="btn">EMPEZAR A DESHIDRATAR</button>
                     </a>
                     <div class="footer">BUILT BY FUTURE ENGINEERS FOR AN INTEGRATOR</div>
